--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
         integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -334,16 +336,16 @@
       <h2 class="display-4 mb-5 text-gamboge">Support</h2>
     </div>
     <div class="row support-button">
-        <div class="col">
+        <div class="col-md-4">
           <a href="https://github.com/JonnyWong16/plexpy/wiki/Frequently-Asked-Questions-(FAQ)"><i class="fa fa-github fa-2x"></i></a>
         </div>
-        <div class="col">
+        <div class="col-md-4">
           <a href="https://discord.gg/36ggawe"><i class="icon icon-discord fa-2x"></i></a>
         </div>
-        <div class="col">
-          <a href="https://gitter.im/plexpy/general"><i class="icon icon-gitter fa-2x"></i></a>
-        </div>
-        <div class="col">
+        <!--<div class="col-md-4">-->
+          <!--<a href="https://gitter.im/plexpy/general"><i class="icon icon-gitter fa-2x"></i></a>-->
+        <!--</div>-->
+        <div class="col-md-4">
           <a href="https://forums.plex.tv/discussion/169591/plexpy-another-plex-monitoring-program"><i class="icon icon-plex fa-2x"></i></a>
         </div>
 
