Add Reddit Link, make external links open in new window

--- a/index.html
+++ b/index.html
@@ -222,7 +222,11 @@
             <i class="fa fa-android fa-3x"></i>
           </div>
 
-          <h3>Tautulli Remote <sup><small><small>beta</small></small></sup></h3>
+          <h3>Tautulli Remote <sup>
+            <small>
+              <small>beta</small>
+            </small>
+          </sup></h3>
           <p class="text-gray-chateau">Download the Android app to view stats on the go</p>
         </div>
       </div>
@@ -251,50 +255,68 @@
 
     <div class="gallery">
 
-        <figure>
-          <img src="images/screenshots/activity.png" alt="Alt Image Text" />
-          <figcaption>Homepage <small>Monitor current activity and statistics from the homepage</small></figcaption>
-        </figure>
+      <figure>
+        <img src="images/screenshots/activity.png" alt="Alt Image Text"/>
+        <figcaption>Homepage
+          <small>Monitor current activity and statistics from the homepage</small>
+        </figcaption>
+      </figure>
 
-        <figure>
-          <img src="images/screenshots/library.png" alt="Alt Image Text" />
-          <figcaption>Libraries <small>View the number of media items in your libraries.</small></figcaption>
-        </figure>
+      <figure>
+        <img src="images/screenshots/library.png" alt="Alt Image Text"/>
+        <figcaption>Libraries
+          <small>View the number of media items in your libraries.</small>
+        </figcaption>
+      </figure>
 
-        <figure>
-          <img src="images/screenshots/library.png" alt="Alt Image Text" />
-          <figcaption>Library Statistics <small>See detailed statistics about each library.</small></figcaption>
-        </figure>
+      <figure>
+        <img src="images/screenshots/library.png" alt="Alt Image Text"/>
+        <figcaption>Library Statistics
+          <small>See detailed statistics about each library.</small>
+        </figcaption>
+      </figure>
 
-        <figure>
-          <img src="images/screenshots/media item.png" alt="Alt Image Text" />
-          <figcaption>Media Info <small>Browse and view info about the media in your Plex libraries.</small></figcaption>
-        </figure>
+      <figure>
+        <img src="images/screenshots/media item.png" alt="Alt Image Text"/>
+        <figcaption>Media Info
+          <small>Browse and view info about the media in your Plex libraries.</small>
+        </figcaption>
+      </figure>
 
-        <figure>
-          <img src="images/screenshots/users.png" alt="Alt Image Text" />
-          <figcaption>Users <small>Track the activity of your users.</small></figcaption>
-        </figure>
+      <figure>
+        <img src="images/screenshots/users.png" alt="Alt Image Text"/>
+        <figcaption>Users
+          <small>Track the activity of your users.</small>
+        </figcaption>
+      </figure>
 
-        <figure>
-          <img src="images/screenshots/user info.png" alt="Alt Image Text" />
-          <figcaption>User Statistics <small>See detailed statistics about each user.</small></figcaption>
-        </figure>
+      <figure>
+        <img src="images/screenshots/user info.png" alt="Alt Image Text"/>
+        <figcaption>User Statistics
+          <small>See detailed statistics about each user.</small>
+        </figcaption>
+      </figure>
 
-        <figure>
-          <img src="images/screenshots/history.png" alt="Alt Image Text" />
-          <figcaption>History <small>Log detailed watched statistics for all streaming activity.</small></figcaption>
-        </figure>
+      <figure>
+        <img src="images/screenshots/history.png" alt="Alt Image Text"/>
+        <figcaption>History
+          <small>Log detailed watched statistics for all streaming activity.</small>
+        </figcaption>
+      </figure>
 
-        <figure>
-          <img src="images/screenshots/graphs.png" alt="Alt Image Text" />
-          <figcaption>Graphs <small>Analyze trends on your server using beautiful graphs.</small></figcaption>
-        </figure>
+      <figure>
+        <img src="images/screenshots/graphs.png" alt="Alt Image Text"/>
+        <figcaption>Graphs
+          <small>Analyze trends on your server using beautiful graphs.</small>
+        </figcaption>
+      </figure>
 
-        <figure>
-          <img src="images/screenshots/notifications.png" alt="Alt Image Text" />
-          <figcaption>Notification <small>Get notified with your favourite notification agents.</small></figcaption>
-        </figure>
+      <figure>
+        <img src="images/screenshots/notifications.png" alt="Alt Image Text"/>
+        <figcaption>Notification
+          <small>Get notified with your favourite notification agents.</small>
+        </figcaption>
+      </figure>
 
     </div>
 
@@ -311,15 +333,15 @@
     <div class="row justify-content-md-center">
       <div class="col-md-4">
         <p class="text-center lead">Tautulli</p>
-        <a href="https://github.com/JonnyWong16/plexpy">
-          <img alt='Get it on GitHub' src='images/github_badge.png' class="img-fluid" />
+        <a target="_blank" href="https://github.com/JonnyWong16/plexpy">
+          <img alt='Get it on GitHub' src='images/github_badge.png' class="img-fluid"/>
         </a>
       </div>
       <div class="col-md-4">
 
         <p class="text-center lead">Tautulli Remote</p>
-        <a href='https://play.google.com/store/apps/details?id=com.williamcomartin.plexpyremote'>
-          <img alt='Get it on Google Play' src='images/google_play_badge.png' class="img-fluid" />
+        <a target="_blank" href='https://play.google.com/store/apps/details?id=com.williamcomartin.plexpyremote'>
+          <img alt='Get it on Google Play' src='images/google_play_badge.png' class="img-fluid"/>
         </a>
         <!--<a href="https://play.google.com/store/apps/details?id=com.williamcomartin.plexpyremote&hl=en" class="btn btn-block bg-river-bed text-alabaster hover-bg-shark">Download Android App</a>-->
       </div>
@@ -336,18 +358,24 @@
       <h2 class="display-4 mb-5 text-gamboge">Support</h2>
     </div>
     <div class="row support-button">
-        <div class="col-md-4">
-          <a href="https://github.com/JonnyWong16/plexpy/wiki/Frequently-Asked-Questions-(FAQ)"><i class="fa fa-github fa-2x"></i></a>
-        </div>
-        <div class="col-md-4">
-          <a href="https://discord.gg/36ggawe"><i class="icon icon-discord fa-2x"></i></a>
-        </div>
-        <!--<div class="col-md-4">-->
-          <!--<a href="https://gitter.im/plexpy/general"><i class="icon icon-gitter fa-2x"></i></a>-->
-        <!--</div>-->
-        <div class="col-md-4">
-          <a href="https://forums.plex.tv/discussion/169591/plexpy-another-plex-monitoring-program"><i class="icon icon-plex fa-2x"></i></a>
-        </div>
+      <div class="col-md-3">
+        <a target="_blank" href="https://github.com/JonnyWong16/plexpy/wiki/Frequently-Asked-Questions-(FAQ)"><i
+          class="fa fa-github fa-2x"></i></a>
+      </div>
+      <div class="col-md-3">
+        <a target="_blank" href="https://discord.gg/36ggawe"><i class="icon icon-discord fa-2x"></i></a>
+      </div>
+
+      <div class="col-md-3">
+        <a target="_blank" href="https://www.reddit.com/r/Tautulli/"><i class="fa fa-reddit-alien fa-2x"></i></a>
+      </div>
+      <!--<div class="col-md-3">-->
+      <!--<a target="_blank" href="https://gitter.im/plexpy/general"><i class="icon icon-gitter fa-2x"></i></a>-->
+      <!--</div>-->
+      <div class="col-md-3">
+        <a target="_blank" href="https://forums.plex.tv/discussion/169591/plexpy-another-plex-monitoring-program"><i
+          class="icon icon-plex fa-2x"></i></a>
+      </div>
 
     </div>
   </div>
@@ -366,29 +394,29 @@
           <div class="card-body">
             <h4 class="card-title">Tautulli</h4>
 
-            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DG783BMSCU3V4"
+            <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DG783BMSCU3V4"
                class="btn btn-link text-gamboge">
               <i class="fa fa-paypal"></i> PayPal</a>
             <!--<br />-->
-            <!--<a href="https://www.coinbase.com/JonnyWong16/"-->
-               <!--class="btn btn-link text-gamboge">-->
-              <!--<i class="fa fa-bitcoin"></i> Bitcoin</a>-->
+            <!--<a target=_blank href="https://www.coinbase.com/JonnyWong16/"-->
+            <!--class="btn btn-link text-gamboge">-->
+            <!--<i class="fa fa-bitcoin"></i> Bitcoin</a>-->
 
           </div>
         </div>
-      <!--</div>-->
-      <!--<div class="col-md-4 mb-3">-->
+        <!--</div>-->
+        <!--<div class="col-md-4 mb-3">-->
         <div class="card bg-shark">
           <div class="card-body">
             <h4 class="card-title">Tautulli Remote</h4>
 
-            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ADRXXSWUJF788"
+            <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ADRXXSWUJF788"
                class="btn btn-link text-gamboge">
               <i class="fa fa-paypal"></i> PayPal</a>
 
-            <!--<a href="https://flattr.com/profile/williamcomartin"-->
-               <!--class="btn btn-link text-gamboge">-->
-              <!--<i class="fa fa-dollar"></i> Flattr</a>-->
+            <!--<a target=_blank href="https://flattr.com/profile/williamcomartin"-->
+            <!--class="btn btn-link text-gamboge">-->
+            <!--<i class="fa fa-dollar"></i> Flattr</a>-->
 
           </div>
         </div>
@@ -396,30 +424,30 @@
     </div>
 
     <!--<div class="row support-button">-->
-      <!--<div class="col">-->
-        <!--<h3 class="pb-3">Server</h3>-->
-        <!--<div class="row justify-content-md-center">-->
-          <!--<div class="col">-->
-            <!--<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DG783BMSCU3V4"><i class="fa fa-paypal fa-2x"></i></a>-->
-          <!--</div>-->
-          <!--<div class="col">-->
-            <!--<a href="https://www.coinbase.com/JonnyWong16/"><i class="fa fa-bitcoin fa-2x"></i></a>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--<div class="col">-->
-        <!--<h3 class="pb-3">Android App</h3>-->
-        <!--<div class="row justify-content-md-center">-->
-          <!--<div class="col">-->
-            <!--<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ADRXXSWUJF788"><i class="fa fa-paypal fa-2x"></i></a>-->
-          <!--</div>-->
-          <!--<div class="col">-->
-            <!--<a href="https://flattr.com/profile/williamcomartin"><i class="fa fa-dollar fa-2x"></i></a>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
+    <!--<div class="col">-->
+    <!--<h3 class="pb-3">Server</h3>-->
+    <!--<div class="row justify-content-md-center">-->
+    <!--<div class="col">-->
+    <!--<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DG783BMSCU3V4"><i class="fa fa-paypal fa-2x"></i></a>-->
+    <!--</div>-->
+    <!--<div class="col">-->
+    <!--<a href="https://www.coinbase.com/JonnyWong16/"><i class="fa fa-bitcoin fa-2x"></i></a>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="col">-->
+    <!--<h3 class="pb-3">Android App</h3>-->
+    <!--<div class="row justify-content-md-center">-->
+    <!--<div class="col">-->
+    <!--<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ADRXXSWUJF788"><i class="fa fa-paypal fa-2x"></i></a>-->
+    <!--</div>-->
+    <!--<div class="col">-->
+    <!--<a href="https://flattr.com/profile/williamcomartin"><i class="fa fa-dollar fa-2x"></i></a>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
 
-    </div>
+  </div>
   </div>
 </section>
 
