Adjust some headings, add for Plex

--- a/index.html
+++ b/index.html
@@ -53,31 +53,36 @@
   </div>
 </nav>
 
-<section id="heading" class="d-flex align-items-center justify-content-center">
+<section id="heading" class="d-flex align-items-center justify-content-center" style="position: relative">
   <div class="text-center">
-    <h2 class="display-1">Tautulli</h2>
+    <h2 class="display-1" id="heading-name"><img src="images/tautulli.png" /> <span id="heading-plex">for <img src="images/plex-logo-reversed-flat-transparent.png" /></span></h2>
     <p class="p-5">Monitor your Plex Media Server</p>
     <p><a href="#download" class="btn bg-gamboge text-alabaster">Get It Now</a></p>
   </div>
+
+  <blockquote class="blockquote text-right" style="position: absolute; bottom: 2rem; right: 4rem; max-width: 600px">
+    <p class="mb-0"><em>Tautulli is the best web application to monitor, view analytics, and receive notifications
+      about your Plex Media Server.</em></p>
+    <footer class="blockquote-footer">One of the Developer's Mom</footer>
+  </blockquote>
 </section>
 
 <section id="about" class="bg-river-bed text-alabaster p-5">
   <div class="container">
-    <h2 class="display-4 mb-5 text-gamboge">What is Tautulli?</h2>
+    <div class="sec-title">
+    <h2 class="h2 mb-5 text-alabaster text-center">What is Tautulli?</h2>
+    </div>
     <div class="row">
       <div class="col-md-3 text-center mb-4">
         <img src="images/favicon.png" alt="member" class="img-fluid">
       </div>
       <div class="col-md">
-        <blockquote class="blockquote text-right">
-          <p class="mb-0"><em>Tautulli is the best web application to monitor, view analytics, and receive notifications
-            about your Plex Media Server.</em></p>
-          <footer class="blockquote-footer">One of the Developer's Mom</footer>
-        </blockquote>
+
 
         <!--<p class="lead">Tautulli is a python based web application for monitoring, analytics, and notifications for your Plex Media Server.</p>-->
+        <p>verb | tau &#x2022; tul &#x2022; li | <code class="bg-shark text-gamboge">\ ˈtau̇-tü-lē \</code> | To watch or monitor</p>
         <p>
-          Tautulli (pronounced "Tau Too lee") is a 3rd party application that you can run along side your Plex Media
+          Tautulli is a 3rd party application that you can run along side your Plex Media
           Server to monitor activity and track various statistics.
           Most importantly, these statistics include <span class="text-gamboge">what</span> has been watched, <span
           class="text-gamboge">who</span> watched it, <span class="text-gamboge">when</span> and <span
@@ -96,7 +101,7 @@
   <div class="container">
 
     <div class="sec-title">
-      <h2 class="display-4 mb-5 text-gamboge">Features</h2>
+      <h2 class="h2 mb-5 text-alabaster text-center">Features</h2>
     </div>
 
     <div class="row justify-content-md-center">
@@ -250,7 +255,7 @@
   <div class="container">
 
     <div class="sec-title">
-      <h2 class="display-4 mb-5 text-gamboge">Preview</h2>
+      <h2 class="h2 mb-5 text-alabaster text-center">Preview</h2>
     </div>
 
     <div class="gallery">
@@ -327,7 +332,7 @@
   <div class="container">
 
     <div class="sec-title">
-      <h2 class="display-4 mb-5">Download</h2>
+      <h2 class="h2 mb-5 text-center">Download</h2>
     </div>
 
     <div class="row justify-content-md-center">
@@ -355,7 +360,7 @@
   <div class="container">
 
     <div class="sec-title">
-      <h2 class="display-4 mb-5 text-gamboge">Support</h2>
+      <h2 class="h2 mb-5 text-alabaster text-center">Support</h2>
     </div>
     <div class="row support-button">
       <div class="col-md-3">
@@ -385,7 +390,7 @@
   <div class="container">
 
     <div class="sec-title">
-      <h2 class="display-4 mb-5 text-gamboge">Donate</h2>
+      <h2 class="h2 mb-5 text-alabaster text-center">Donate</h2>
     </div>
 
     <div class="row justify-content-md-center">
@@ -395,7 +400,7 @@
             <h4 class="card-title">Tautulli</h4>
 
             <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DG783BMSCU3V4"
-               class="btn btn-link text-gamboge">
+               class="btn btn-link text-gamboge hover-text-alabaster">
               <i class="fa fa-paypal"></i> PayPal</a>
             <!--<br />-->
             <!--<a target=_blank href="https://www.coinbase.com/JonnyWong16/"-->
@@ -411,7 +416,7 @@
             <h4 class="card-title">Tautulli Remote</h4>
 
             <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ADRXXSWUJF788"
-               class="btn btn-link text-gamboge">
+               class="btn btn-link text-gamboge hover-text-alabaster">
               <i class="fa fa-paypal"></i> PayPal</a>
 
             <!--<a target=_blank href="https://flattr.com/profile/williamcomartin"-->
