--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <h2 class="h2 mb-5 text-alabaster text-center">What is Tautulli?</h2>
     </div>
     <div class="row">
-      <div class="col-md-3 text-center mb-4">
+      <div class="col-md-3 col-lg-2 text-center mb-4">
         <img src="images/favicon.png" alt="member" class="img-fluid">
       </div>
       <div class="col-md">
