Add Min Height to Header

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </div>
 </nav>
 
-<section id="heading" class="d-flex align-items-center justify-content-center" style="position: relative">
+<section id="heading" class="d-flex align-items-center justify-content-center">
   <div class="text-center">
     <h2 class="display-1" id="heading-name"><img src="images/tautulli.png" /> <span id="heading-plex">for <img src="images/plex-logo-reversed-flat-transparent.png" /></span></h2>
     <p class="p-5">Monitor your Plex Media Server</p>
