--- a/index.html
+++ b/index.html
@@ -494,6 +494,6 @@
 <!-- jquery easing -->
 <script src="js/jquery.easing.min.js"></script>
 
-<script src="js/script.js"></script>
+<script src="js/script.min.js"></script>
 </body>
 </html>
