--- a/index.html
+++ b/index.html
@@ -495,5 +495,16 @@
 <script src="js/jquery.easing.min.js"></script>
 
 <script src="js/script.min.js"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111522699-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111522699-1');
+</script>
+
 </body>
 </html>
