Update Discord link to #welcome-and-rules channel

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
       </div>
 
       <div class="col-md-3">
-        <a target="_blank" href="https://discord.gg/36ggawe"
+        <a target="_blank" href="https://discord.gg/tQcWEUp"
            onclick="gtag('event', 'support', {event_category: 'engagement', event_label: 'Discord'})">
           <i class="icon icon-discord fa-2x"></i></a>
       </div>
